<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scheduler.SettingsPage">

    <EditText
        android:id="@+id/editText5"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="166dp"
        android:layout_marginBottom="157dp"
        android:ems="10"
        android:hint="@string/eightPM"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/weekdaySaturdaySunday"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton10" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:text="@string/weekdayTuesdayThursday"
        app:layout_constraintEnd_toStartOf="@+id/radioButton7"
        app:layout_constraintStart_toEndOf="@+id/radioButton9"
        app:layout_constraintTop_toTopOf="@+id/radioButton5" />

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/weekdayWednesday"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton6"
        app:layout_constraintEnd_toStartOf="@+id/radioButton5"
        app:layout_constraintStart_toEndOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/weekdayTuesdayThursday"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/radioButton8"
        app:layout_constraintStart_toEndOf="@+id/radioButton7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:text="@string/weekdayFriday"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton10"
        app:layout_constraintEnd_toStartOf="@+id/radioButton10"
        app:layout_constraintStart_toEndOf="@+id/radioButton5" />

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:text="@string/weekdaySaturdaySunday"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintStart_toEndOf="@+id/radioButton8"
        app:layout_constraintTop_toTopOf="@+id/radioButton5" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/weekdayMonday"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioButton6"
        app:layout_constraintEnd_toStartOf="@+id/radioButton6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/allowDays"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:text="@string/defaultDuration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton9" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/one"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hours"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="45dp"
        android:text="@string/preferences"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/allowedHours"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="166dp"
        android:layout_marginBottom="162dp"
        android:ems="10"
        android:hint="@string/eightAM"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="34dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/and"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</android.support.constraint.ConstraintLayout>